Added swagger parse line to swagger.yaml. Added users and getUserById api requests.
